--- a/src/components/MailBox/MailBox.module.css
+++ b/src/components/MailBox/MailBox.module.css
@@ -1,18 +1,18 @@
-/* "rgba(255, 0, 51, 0.2)" */
 .mailbox {
   border: 1px solid black;
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.04);
   line-height: 1.25;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .mailbox.full {
-  background-color: rgba(255, 0, 51, 0.2);
+  background-color: rgba(255, 0, 51, 0.1);
 }
 
 .mailboxTitle {
   margin-bottom: 15px;
   margin-top: 0;
-  text-shadow: 4px 1px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
